--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -40,7 +40,8 @@ android {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.butterfree"
         minSdkVersion 16
-        targetSdkVersion 28
+        targetSdkVersion 29
+        compileSdkVersion 29
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
