--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -37,8 +37,7 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.butterfree"
+        applicationId "io.gastrodon.butterfree"
         minSdkVersion 16
         targetSdkVersion 29
         compileSdkVersion 29
