--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,8 +8,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^0.1.2
   file_picker: ^1.7.1
+  url_launcher: ^5.4.5
 
 dev_dependencies:
   flutter_test:
