--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
     sdk: flutter
   file_picker: ^1.7.1
   url_launcher: ^5.4.5
+  http: ^0.12.1
 
 dev_dependencies:
   flutter_test:
